Fixed Icon usage for light mode and dark mode

--- a/src/app/landingpage/landingpage.component.css
+++ b/src/app/landingpage/landingpage.component.css
@@ -306,7 +306,7 @@ em{
 .card-item-text {
   font-size: var(--font-size-lg);
   color: var(--color-text-tertiary);
-  line-height: var(--line-height-tight);
+  line-height: var(--line-height-tightcla);
 }
 
 /* ============================================
